--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@
 }
 
 body {
-  background-image: url('../texture/lego.png');
+  background-image: url('../img/lego.png');
   background-size: cover;
 }
 
