--- a/css/1.css
+++ b/css/1.css
@@ -5,11 +5,6 @@ body {
   min-height: 100vh;
   background-image: linear-gradient(#fe4741, white);
 }
-button {
-	background: #FFFFFF;
-	margin-top: 15px;
-	border-radius: 10px;
-}
 
 img:hover {
 	opacity: 1;
@@ -26,4 +21,99 @@ img {
 h2 {
 	margin-left: 30px;
 	font-family: papyrus;
+}
+
+.dropbtn {
+  background-color: white;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.dropbtn .tooltiptext {
+
+  width: 250px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 16px 0;
+  position: absolute;
+  z-index: 1;
+  top: 0px;
+  left: 110%;
+  display: none;
+}
+
+.dropbtn .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent black transparent transparent;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: none;
+  min-width: 160px;
+  z-index: 1;
+}
+
+.dropdown-content button {
+  color: black;
+  padding: 12px 16px;
+  width: 160px;
+  text-decoration: none;
+  display: block;
+  margin: 10px;
+  border-radius: 8px;
+}
+
+.dropdown-content button:hover {
+	border: solid;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: grey;
+}
+
+.shapes button {
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+  margin-left: 10px;
+}
+
+.shapes {
+	position:absolute;
+	left:350px;
+	top:25px;
+	
 }
