--- a/css/about.css
+++ b/css/about.css
@@ -15,7 +15,7 @@ p {
 }
 
 body {
-  background-image: url('../img/bg1.jpg');
+  background-image: url('../assets/bg1.jpg');
   background-size: cover;
 }
 
